--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,10 @@
 	color:whitesmoke !important;
 	font-family: 'Lato';
 	text-align: center;
-    margin-top: 190px;
+        margin-top: 190px;
 	margin-left:400px;
-    border:2px  rgba(0, 0, 0, 0.473);
+        border:2px  rgba(0, 0, 0, 0.473);
+	border-radius:20px;
 	position: absolute;
 	width:400px;
 	box-shadow: 10px 10px 5px black;
