--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,4 +109,33 @@
 	
 	
 }
+.wrapper{
+	width: 100vw;
+	height: 100vh;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #333333;
+}
+.loader{
+	width: 140px;
+	height: 140px;
+	border:15px solid #ccc ;
+	border-radius:50% ;
+	margin: 0 auto;
+    border-top: 15px solid orange;
+	animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+	0%{
+		transform: rotate(0deg);
+	}
+	100%{
+		transform: rotate(360deg);
+	}
+}
 
